# flirextractor

./: pyproject.toml
flirextractor/: flirextractor.py  get_thermal.py  raw_temp_to_celcius.py
tests/: test_version.py
