[tool.black]
line-length = 79
exclude = "scripts/example.py|.venv"

[tool.isort]
profile = "black"
line_length = 79
skip_glob = "*.md"
filter_files = true
skip = ["scripts/example.py"]

[project]
name = "flirextractor"
version = "1.0.2"
description = "An efficient GPLv3-licensed Python package for extracting temperature data from FLIR IRT images."
authors = ["Alois Klink <alois.klink@gmail.com>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/aloisklink/flirextractor"
homepage = "https://github.com/aloisklink/flirextractor"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyexiftool",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "black==19.10b0",
    "mypy==0.782",
    "flake8==3.7",
    "pytest==5.2",
    "tomlkit==0.7.0",
    "isort==5.0.0",
    "pre-commit==2.0.0",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
